--- a/src/tablets.scss
+++ b/src/tablets.scss
@@ -10,6 +10,14 @@
 	bottom: 0;
 	padding: 0 10vw; 
 
+	-webkit-touch-callout: none; /* iOS Safari */
+	-webkit-user-select: none; /* Safari */
+	 -khtml-user-select: none; /* Konqueror HTML */
+	   -moz-user-select: none; /* Firefox */
+	    -ms-user-select: none; /* Internet Explorer/Edge */
+	        user-select: none; /* Non-prefixed version, currently
+	                              supported by Chrome and Opera */	
+	
 	ul {
 		display: flex;
 		flex-direciton: row;
@@ -769,6 +777,14 @@
 			width: 100%;
 			border-right: 1px solid rgba(255, 255, 255, 0.1);
 			border-bottom: 0px;
+
+			-webkit-touch-callout: none; /* iOS Safari */
+			-webkit-user-select: none; /* Safari */
+			 -khtml-user-select: none; /* Konqueror HTML */
+			   -moz-user-select: none; /* Firefox */
+			    -ms-user-select: none; /* Internet Explorer/Edge */
+			        user-select: none; /* Non-prefixed version, currently
+			                              supported by Chrome and Opera */			
 			
 			.menu-icon {
 				font-size: 2vw;
